fixed spacing on timeline

--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -39,7 +39,7 @@
 #mobile_container{
     width: 80%;
     margin: auto;
-    height: 600px;
+    height: 650px;
     /* overflow-y: scroll; */
     background-color: #ECF9F6 ;
 }
